# PythonDev

./: README.md  pyproject.toml
RPS/: rps.py
beginner-exercises/01/: area.py
cbar/: force.py  table.py
cbar/cbar_skype/: force.py  m.py  table.py  tui.py  ui.py
inventroy/: config.toml  inventory.py  inventory.txt  shopping.py  shopping_list.py
invoice/: 2023-08-08 04:03:18  2023-08-08 04:05:12.txt  customers.txt  date2.py  invoice.py  invoice2.py  products.txt  time2.py
password_generator/: main.py
phonebook/phonebook-cli-csv/: ui.py
phonebook/phonebook-tkinter/: contacts.csv
py-exercises/exercises/Beginner/: addone.py  compare.py  remove_space.py
pybyex/python-by-example/: Salaries.csv  Score.csv  a.csv  testfile.csv  users.csv
quiz/: app.py  questions.py
unit_converter/: main.py
